# TrabalhoPratico

./: CMakeLists.txt  Solo.cpp  Solo.h  interpretador.cpp  jardineiro.cpp  jardineiro.h  main.cpp
Comandos/: comandoavanca.cpp  comandocolhe.cpp  comandocolhe.h  comandojardim.cpp  comandojardineiro.cpp  comandojardineiro.h  comandoplantas.cpp  comandosolo.cpp  comandosolo.h
Jardim/: jardim.cpp  jardim.h
Plantas/: erva.cpp  erva.h
